--- a/.gitattributes
+++ b/.gitattributes
@@ -4,8 +4,12 @@
 
 # Files and directories with the attribute export-ignore won’t be added to
 # archive files. See http://git-scm.com/docs/gitattributes for details.
-/.github/           export-ignore
-/.editorconfig      export-ignore
-/.gitattributes     export-ignore
-/.gitignore         export-ignore
-/tox.ini            export-ignore
+
+# Github
+.github/        export-ignore
+.gitattributes  export-ignore
+.gitignore      export-ignore
+
+# Development
+.editorconfig   export-ignore
+pyproject.toml  export-ignore
